@@ -10,6 +10,8 @@ Changes to Version 3.1-1
   
   o Added confidenceEllipses() function to create matrix of all pairwise confidence ellipses for a regression model (suggestion of Michael Friendly).
   
+  o Moved the pointLabel() function from the maptools package in anticipation of the retirement of that package, and with the permission of the function author.
+  
 Changes to Version 3.1-0
 
   o New 3D added-variable and component+residual plots, avPlot3d() and crPlot3d().
